
## [5.17.1] - 2024-05-26

### Added

- Novos tipos de missões diárias adicionados!
- Adicionado botão para usar um roll ao tentar caçar cansado. 

### Changed

- Reduzido a chance de um bônus de daily ser uma semente.
- Adicionado emoji na mensagem de recusar Pix.
- O tempo para o sorteio do bicho foi reduzido para **5** horas.

### Fixed

- Corrigido problema das missões diárias mudarem nos primeiros usos do comando `/daily`. 
- Corrigido erro de português no aviso de Rate Limit.

## [5.17.0] - 2024-05-26

### Added

- **Missões diárias!** Todo dia 3 missões estarão disponíveis. Use `/daily` para ver e reinvidicar seus bônus!
- O comando `/top usos comandos tipo:Comandos mais usados de um usuário` agora mostra o total de comandos usados pelo usuário. - Sugerido por @mareys.

### Changed

- Atualizado texto de nenhum item ativado no comando `/itens`. - Sugerido por @null00111111

### Removed

- Removido limite de plantas na fazendinha. Todos usuários podem plantar todos tipos de sementes agora!

## [5.16.0] - 2024-05-12

### Added

- Adicionado notificações para quando alguém compra alguma imagem que você criou.
- Adicionado a informação de quantos Kg você colheu no `/fazendinha plantações`.
- Novo comando `/menhera sugerir`. Envie suas melhores ideias para a Menhera.

### Fixed

- Se a Menhera não tiver permissão para usar emojis externos, ela usará emojis padrões.

## [5.15.3] - 2024-05-08

### Fixed

- Corrigido inconsistência no display dos limites do `/fazendinha silo`.

## [5.15.2] - 2024-05-05

### Fixed

- Corrigido a lógica de ignorar contas deletadas nos tops.

## [5.15.1] - 2024-05-01

### Added

- Adicionado a informação de sua mão atual nas suas cartas do poker. - Sugerido por @bielviana

### Fixed

- Removida a opção de apostar caças no /coinflip.

## [5.15.0] - 2024-04-28

### Added
