@@ -1,7 +1,7 @@
 {
   "name": "@menhera-bot/events",
   "type": "module",
-  "version": "5.17.1",
+  "version": "5.17.1a",
   "engines": {
     "node": ">=18"
   },
